# tinkle-proto

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  buf.gen.yaml  buf.yaml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: buf-ci.yaml  ci.yml  release-please.yml  release.yml
elixir/: .formatter.exs  CHANGELOG.md  README.md  mix.exs
go/: CHANGELOG.md  go.mod  version.go
rs/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rs/src/: lib.rs
tinkle/v1/: account.proto  auth.proto  bot_api.proto  bots.proto  channels.proto  common.proto  contacts.proto  help.proto  messages.proto  stickers.proto  users.proto
