[package]
name = "tinkle-proto"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "Rust gRPC client bindings for the Tinkle Messenger v1 API"
license = "Apache-2.0"
repository = "https://github.com/tinklehq/tinkle-proto"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"
