[package]
name = "tinkle-proto"
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
description = "Rust gRPC client bindings for the Tinkle Messenger v1 API"
license = "Apache-2.0"
repository = "https://github.com/tinklehq/tinkle-proto"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
